# bewegrs

./: Cargo.toml  README.md
.github/workflows/: cargo.yaml
crates/stars/: Cargo.toml
crates/stars/benches/: starbench.rs
crates/stars/src/: easy.rs  lib.rs  main.rs  safe.rs
examples/: draw_a_damn_image.rs  draw_roundrect.rs  drop.rs  periodic.rs  stars.rs  stars2.rs
src/: counter.rs  counters.rs  errors.rs  lib.rs  main.rs  shapes.rs
src/graphic/: mod.rs
src/graphic/elements/: info.rs
src/physics/: mod.rs  world.rs
src/shapes/: rectround.rs
src/ui/: mod.rs
src/ui/elements/: clickeable.rs  info.rs  mod.rs
src/ui/nativeui/elements/: clickeable.rs  mod.rs
