[package]
name = "bewegrs"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "small examplary gui written with sfml in rust"
readme = "README.md"
homepage = "https://github.com/PlexSheep/bewegrs"
repository = "https://github.com/PlexSheep/bewegrs"

[dependencies]
rand = "0.9.0"
sfml = "0.24.0"
