
[package]
name = "bewegrs"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "small examplary gui written with sfml in rust"
readme = "README.md"
homepage = "https://github.com/PlexSheep/bewegrs"
repository = "https://github.com/PlexSheep/bewegrs"

[dependencies]
egui = "0.31.1"
egui-sfml = "0.9.0"
ringbuffer = "0.15.0"
sfml = "0.24.0"
tracing = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.profiling]
inherits = "release"
debug = true

[workspace]
members = ["crates/stars"]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
getopts = "0.2.21"
rand = "0.9.0"
