[package]
name = "stars"
version = "0.1.0"
edition = "2024"
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
bewegrs = { version = "0.1.0", path = "../.." }
getopts.workspace = true
rand.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "starbench"
harness = false

[lib]

[[bin]]
name = "stars"
